--- a/src/components/Match/MatchSummaryGroup.module.css
+++ b/src/components/Match/MatchSummaryGroup.module.css
@@ -18,5 +18,5 @@
     position: sticky;
     top: 38px;
     background-color: var(--background-default);
-    box-shadow: 0 0.5em 1em var(--background-default), 0 0.25em 0.25em var(--background-default);
+    box-shadow: 0 0.4em .8em var(--background-default), 0 0.25em 0.25em var(--background-default);
 }
