--- a/src/components/User/UserAvatar.module.css
+++ b/src/components/User/UserAvatar.module.css
@@ -32,6 +32,8 @@
     background-color: var(--background-default);
     border: 1px solid var(--border-default);
     border-radius: var(--border-radius);
+    color: var(--background-default);
+    text-shadow: 1px 1px 2px var(--text-color-default), -1px -1px 2px var(--text-color-default);
 }
 .name {
     padding-top: 6rem;
