--- a/src/components/common/Champion.module.css
+++ b/src/components/common/Champion.module.css
@@ -9,15 +9,19 @@
     height: 48px;
     margin-right: 0.6em;
     transition: var(--transition-default);
+    transition-property: width, height, margin-right;
 }
 .icon {
     background-repeat: no-repeat;
+    transform-origin: 0 0;
     transition: var(--transition-default);
+    transition-property: transform;
 }
 .title {
     color: var(--text-color-secondary);
     height: 1.4em;
     transition: var(--transition-default);
+    transition-property: height;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
@@ -37,7 +41,6 @@
 }
 .compact .icon {
     transform: scale(0.666666);
-    transform-origin: 0 0;
 }
 .compact .title {
     height: 0;
